# Hobby-Rocket-Motor-Finder

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
backend/: README.md  pyproject.toml
backend/hpr_finder/: __init__.py  alerts.py  catalog.py  cli.py  curves.py  db.py  health.py  history.py  http.py  models.py  normalize.py  pack.py  snapshot.py
backend/hpr_finder/scrapers/: __init__.py  aerotechdirect.py  amw.py  balsa_machining.py  base.py  buyrocketmotors.py  csrocketry.py  erockets.py  loki.py  moto_joe.py  motorman.py  newcenturyrocketry.py  performancehobbies.py  prices.py  sirius.py  wildman.py
backend/tests/: test_aerotechdirect_parse.py  test_alert_on_degraded.py  test_alerts.py  test_amw_parse.py  test_balsa_machining_parse.py  test_buyrocketmotors_parse.py  test_catalog.py  test_cli_scrape.py  test_csrocketry_parse.py  test_curves.py  test_db_find_cti_motor_id.py  test_db_find_motor_id.py  test_db_migrations.py  test_db_rematch.py  test_db_scrape_runs.py  test_e2e_pipeline.py  test_erockets_parse.py  test_health.py  test_history.py  test_http.py  test_loki_parse.py  test_moto_joe_parse.py  test_motorman_parse.py  test_newcenturyrocketry_parse.py  test_normalize.py  test_normalize_cti.py  test_pack.py  test_performancehobbies_parse.py  test_prices.py  test_scraper_registry.py  test_sirius_parse.py  test_snapshot_carry_forward.py  test_snapshot_export.py  test_wildman_parse.py
backend/tests/fixtures/: aerotechdirect_home_banner.html  aerotechdirect_products.json  amw_cat104_dms.html  amw_cti_cat6_54mm.html  balsa_machining_hpm.html  buyrocketmotors_h148r.html  buyrocketmotors_h238t_oos.html  csrocketry_cti_i170_classic.html  csrocketry_cti_k815_oos.html  csrocketry_h242t_instock.html  csrocketry_h73j_lowstock.html  csrocketry_j825r_oos.html  csrocketry_k400c_oos_bad_escape.html  csrocketry_o6000_oos_bad_escape.html  erockets_category.html  loki_reloads.html  moto_joe_category_aerotech.html  moto_joe_category_cesaroni.html  moto_joe_product_cesaroni.html  moto_joe_product_instock.html  moto_joe_product_oos.html  performancehobbies_branch_aerotech_reloads.html  performancehobbies_branch_aerotech_top.html  performancehobbies_branch_cesaroni.html  sirius_g138t_instock.html  (+9 more)
(+219 files in other folders)
