[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hpr-finder"
version = "0.1.0"
description = "Scraper and aggregator for U.S. high-power rocketry motor availability"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
hpr = "hpr_finder.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["hpr_finder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
