[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hpr-finder"
version = "0.1.0"
description = "Scraper and aggregator for U.S. high-power rocketry motor availability"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
hpr = "hpr_finder.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["hpr_finder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error::DeprecationWarning",
]

[tool.coverage.run]
source = ["hpr_finder"]
omit = ["hpr_finder/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports/vars, etc.)
    "I",   # isort
    "B",   # bugbear (likely bugs)
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — long URLs/regexes are fine
    "E741",  # `l` is fine for a local Listing variable
    "B008",  # Typer requires call-in-default for Option/Argument
    "UP042", # keeping (str, Enum) over StrEnum — identical for our use, less churn
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # late imports inside test functions are OK
